2002-06-25  Andreas J. Guelzow <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=84396
	* html.c (html_get_text_color) : be more careful
	(write_cell) : write the background colour if and only if the cell has a
	  background pattern
	* latex.c (latex2e_write_multicolumn_cell) : be more casreful with font colours.

2002-06-13  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html_read.c (html_read_content) : also save src prop of <img>

2002-06-13  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html_read.c (html_search_for_tables) : important all rather than just top tables

2002-06-13  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html_read.c (html_read_content) : add argument and save href prop of <a>
	(html_read_row) : set comment

2002-06-12  Jody Goldberg <jody@gnome.org>

	* html_read.c : clean up the includes and remove some old cruft.

2002-06-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html_read.c (html_read_content) : new
	(html_read_row) : move some code into html_read_content, <th> should be bold

2002-06-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html_read.c (html_read_row) : handle merges (colspan/rowspan)

2002-06-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html.h (html_file_open) : fix prototype 
	* html_read.c (html_read_buffer) : disable
	(html_get_sheet) : new
	(html_read_row) : new
	(html_read_table) : new
	(html_search_for_tables) : really find tables
	(html_read_buffer) : change invocation of html_search_for_tables

2002-06-06  Jody Goldberg <jody@gnome.org>

	* html_read.c (html_file_open) : convert to using libgsf.
	  And rewrite to use libxml2's html parser.  We still need to walk the
	  resulting parse tree.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* boot.c : remove gnome.h
	* font.c : ditto.
	* roff.c : use libgnome/gnome-i18n.h

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-05-13  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html_read.c (html32_read_buffer) : make static
